# AIQuotaHub

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.zcode/plans/: plan-sess_9bc024b8-74db-4982-acac-9a8ea850647c.md
resources/: providers.json
src/: main.cpp
src/core/: CredentialStore.cpp  CredentialStore.h  CredentialStore.mm  HttpJsonClient.cpp  HttpJsonClient.h  JsonPath.h  Models.h  Provider.h  ProviderManager.cpp  ProviderManager.h  ProvidersConfig.cpp  ProvidersConfig.h  RefreshScheduler.cpp  RefreshScheduler.h
src/providers/: CustomJsonParser.cpp  CustomJsonParser.h  DeepSeekParser.cpp  DeepSeekParser.h  DeepSeekProvider.cpp  DeepSeekProvider.h  DemoProvider.cpp  DemoProvider.h  GenericBalanceParser.cpp  GenericBalanceParser.h  GlmParser.cpp  GlmParser.h  GlmProvider.cpp  GlmProvider.h  HttpProvider.cpp  HttpProvider.h  MoonshotParser.cpp  MoonshotParser.h  OpenAiCostsParser.cpp  OpenAiCostsParser.h
src/ui/: AddProviderDialog.cpp  AddProviderDialog.h  MainWindow.cpp  MainWindow.h  ProviderCard.cpp  ProviderCard.h  RingProgress.cpp  RingProgress.h  SettingsDialog.cpp  SettingsDialog.h  Theme.cpp  Theme.h  TrayIcon.cpp  TrayIcon.h  UiColors.h
tests/: CMakeLists.txt  test_parsers.cpp
tests/fixtures/: deepseek_balance.json  glm_quota.json  kimi_balance.json  openai_costs.json
